# protoc-gen-struct-transformer

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  main.go
example/: BUILD.bazel
example/helpers/: BUILD.bazel
example/model/: BUILD.bazel
example/nulls/: BUILD.bazel
example/transform/: BUILD.bazel
generator/: BUILD.bazel  field.go  field_test.go  file.go  file_test.go  generator_suite_test.go  message.go  message_test.go  option_extractor.go  types.go
generator/testdata/: BUILD.bazel
options/: BUILD.bazel  annotations.pb.go
source/: BUILD.bazel  parser.go
