load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude microservices
# gazelle:exclude legacy
# gazelle:exclude src
# gazelle:prefix mobl-dev
gazelle(
    name = "gazelle",
)

go_library(
    name = "mobl-dev_lib",
    srcs = ["main.go"],
    importpath = "mobl-dev",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_bold_commerce_protoc_gen_struct_transformer//generator:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/plugin:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_x_tools//imports:go_default_library",
    ],
)

go_binary(
    name = "mobl-dev",
    embed = [":mobl-dev_lib"],
    visibility = ["//visibility:public"],
)
