load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:exclude microservices
# gazelle:exclude legacy
# gazelle:exclude src
# gazelle:prefix github.com/bold-commerce/protoc-gen-struct-transformer
gazelle(
    name = "gazelle",
)

go_library(
    name = "protoc-gen-struct-transformer_lib",
    srcs = ["main.go"],
    importpath = "github.com/bold-commerce/protoc-gen-struct-transformer",
    visibility = ["//visibility:private"],
    deps = [
        "//generator",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@org_golang_x_tools//imports",
    ],
)

go_binary(
    name = "protoc-gen-struct-transformer",
    embed = [":protoc-gen-struct-transformer_lib"],
    visibility = ["//visibility:public"],
)
