load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "example_proto",
    srcs = ["message.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//options:options_proto",
        "//protobuf@v1.3.1/gogoproto:gogoproto_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "example_go_proto",
    importpath = "mobl-dev/example",
    proto = ":example_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//options",
        "//protobuf@v1.3.1/gogoproto:gogo_proto",
    ],
)

go_library(
    name = "example",
    embed = [":example_go_proto"],
    importpath = "mobl-dev/example",
    visibility = ["//visibility:public"],
)
