load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "options",
    srcs = ["doc.go"],
    embed = [":options_go_proto"],
    importpath = "github.com/bold-commerce/protoc-gen-struct-transformer/options",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "options_proto",
    srcs = ["annotations.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

go_proto_library(
    name = "options_go_proto",
    importpath = "github.com/bold-commerce/protoc-gen-struct-transformer/options",
    proto = ":options_proto",
    visibility = ["//visibility:public"],
)
