load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "source",
    srcs = [
        "doc.go",
        "field.go",
        "parser.go",
    ],
    importpath = "mobl-dev/source",
    visibility = ["//visibility:public"],
)

go_test(
    name = "source_test",
    srcs = [
        "parser_test.go",
        "source_suite_test.go",
    ],
    embed = [":source"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_ginkgo//extensions/table:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
