load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transform",
    srcs = [
        "message_transformer.go",
        "options.go",
    ],
    importpath = "mobl-dev/example/transform",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bold_commerce_protoc_gen_struct_transformer//example:go_default_library",
        "@com_github_bold_commerce_protoc_gen_struct_transformer//example/helpers:go_default_library",
        "@com_github_bold_commerce_protoc_gen_struct_transformer//example/model:go_default_library",
    ],
)
